src/renderer/snapshots/thndrs__renderer__region__tests__error_message.snap
---
source: src/renderer/region.rs
expression: "render_entry_styled(&entry, 80)"
---
│                                                                                   # [bg=#171928]=                                                                                
│   ⚠ Error                                                                         # [bg=#171928]=   [fg=#f16c75 bg=#171928 b]=⚠ Error [bg=#171928]=                                                                      [bg=#171928]=  
│   Provider request failed: connection refused                                     # [bg=#171928]=   [fg=#ebfafa bg=#171928]=Provider request failed: connection refused [bg=#171928]=                                  [bg=#171928]=  
│                                                                                   # [bg=#171928]=
