src/renderer/snapshots/thndrs__renderer__region__tests__json_output.snap
---
source: src/renderer/region.rs
expression: "render_entry_styled(&entry, 80)"
---
│                                                                                   # [bg=#171928]=                                                                                
│   ✓ read_file_range [ok]  path: config.json                                       # [bg=#171928]=   [fg=#37f499 bg=#171928]=✓  [fg=#ebfafa bg=#171928 b]=read_file_range [fg=#37f499 bg=#171928]= [ok] [bg=#171928]=   [fg=#abb4da bg=#171928]=path: config.json [bg=#171928]=                                    [bg=#171928]=  
│      │ {                                                                          # [bg=#171928]=   [fg=#3b4261 bg=#171928]=   │  [fg=#c0c5ce bg=#171928]={ [bg=#171928]=                                                                       [bg=#171928]=  
│      │   "name": "thndrs",                                                        # [bg=#171928]=   [fg=#3b4261 bg=#171928]=   │  [fg=#c0c5ce bg=#171928]=   [fg=#c0c5ce bg=#171928]=" [fg=#a3be8c bg=#171928]=name [fg=#c0c5ce bg=#171928]=" [fg=#c0c5ce bg=#171928]=: [fg=#c0c5ce bg=#171928]=  [fg=#c0c5ce bg=#171928]=" [fg=#a3be8c bg=#171928]=thndrs [fg=#c0c5ce bg=#171928]=" [fg=#c0c5ce bg=#171928]=, [bg=#171928]=                                                     [bg=#171928]=  
│      │   "version": "0.1.0"                                                       # [bg=#171928]=   [fg=#3b4261 bg=#171928]=   │  [fg=#c0c5ce bg=#171928]=   [fg=#c0c5ce bg=#171928]=" [fg=#a3be8c bg=#171928]=version [fg=#c0c5ce bg=#171928]=" [fg=#c0c5ce bg=#171928]=: [fg=#c0c5ce bg=#171928]=  [fg=#c0c5ce bg=#171928]=" [fg=#a3be8c bg=#171928]=0.1.0 [fg=#c0c5ce bg=#171928]=" [bg=#171928]=                                                    [bg=#171928]=  
│      │ }                                                                          # [bg=#171928]=   [fg=#3b4261 bg=#171928]=   │  [fg=#c0c5ce bg=#171928]=} [bg=#171928]=                                                                       [bg=#171928]=
