src/renderer/snapshots/thndrs__renderer__region__tests__narrow_live_frame.snap
---
source: src/renderer/region/tests.rs
expression: contents
---
│     DuckDuckGo HTML fallback via          # [bg=#171928]=   [bg=#171928]=   [fg=#abb4da bg=#171928]=DuckDuckGo HTML fallback via [bg=#171928]=       [bg=#171928]=  
│     web_search tool; read_url fetches     # [bg=#171928]=   [bg=#171928]=   [fg=#abb4da bg=#171928]=web_search tool; read_url fetches [bg=#171928]=  [bg=#171928]=  
│     public HTTP(S) and extracts HTML      # [bg=#171928]=   [bg=#171928]=   [fg=#abb4da bg=#171928]=public HTTP(S) and extracts HTML [bg=#171928]=   [bg=#171928]=  
│     with Lectito                          # [bg=#171928]=   [bg=#171928]=   [fg=#abb4da bg=#171928]=with Lectito [bg=#171928]=                       [bg=#171928]=  
│   [Skills]                                # [bg=#171928]=   [fg=#37f499 bg=#171928 b]=[Skills] [bg=#171928]=                             [bg=#171928]=  
│     (none)                                # [bg=#171928]=   [bg=#171928]=   [fg=#abb4da bg=#171928]=(none) [bg=#171928]=                             [bg=#171928]=  
│   [Diagnostics]                           # [bg=#171928]=   [fg=#37f499 bg=#171928 b]=[Diagnostics] [bg=#171928]=                        [bg=#171928]=  
│     (none)                                # [bg=#171928]=   [bg=#171928]=   [fg=#abb4da bg=#171928]=(none) [bg=#171928]=                             [bg=#171928]=  
│   ────────────────────────────────────    # [bg=#171928]=   [fg=#3b4261 bg=#171928]=──────────────────────────────────── [bg=#171928]=  
│   ›  Ask for a change, run a command,     # [bg=#171928]=   [fg=#37f499 bg=#171928 b]=›   [fg=#abb4da bg=#171928]=Ask for a change, run a command,  [bg=#171928]=  
│   or inspect this repo.                   # [bg=#171928]=   [fg=#abb4da bg=#171928]=or inspect this repo. [bg=#171928]=                [bg=#171928]=  
│   ?  help                                 # [bg=#171928]=   [fg=#37f499 bg=#171928 b]=?   [fg=#abb4da bg=#171928]=help [bg=#171928]=                              [bg=#171928]=  
│   /model switch models                    # [bg=#171928]=   [fg=#37f499 bg=#171928 b]=/model  [fg=#abb4da bg=#171928]=switch models [bg=#171928]=                 [bg=#171928]=  
│                                           # [bg=#171928]=                                        
│                                           # [bg=#171928]=                                        
│    test-session  · idle                   # [bg=#212337]=   [bg=#212337]=  [fg=#37f499 bg=#212337 b]=test-session [bg=#212337]=   [fg=#3b4261 bg=#212337]=· idle [bg=#212337]=                [bg=#212337]=  
│    ›  a longer prompt that should wrap    # [bg=#212337]=   [bg=#212337]=  [fg=#e0e0e0 bg=#212337]=› [bg=#212337]=   [fg=#ebfafa bg=#212337]=a longer prompt that should wrap [bg=#212337]=  
│        at narrow width                    # [bg=#212337]=   [bg=#212337]=     [fg=#ebfafa bg=#212337]= at narrow width [bg=#212337]=                 [bg=#212337]=  
│    model: test-model                      # [bg=#212337]=   [bg=#212337]=  [fg=#abb4da bg=#212337]=model: test-model [bg=#212337]=                   [bg=#212337]=  
│                                           # [bg=#212337]=
