src/renderer/snapshots/thndrs__renderer__region__tests__rust_compiler_output.snap
---
source: src/renderer/region.rs
expression: "render_entry_styled(&entry, 80)"
---
│                                                                                   # [bg=#212337]=                                                                                
│   ✕ run_shell [failed]  program: cargo build                                      # [bg=#212337]=   [fg=#f16c75 bg=#212337]=✕  [fg=#ebfafa bg=#212337 b]=run_shell [fg=#f16c75 bg=#212337]= [failed] [bg=#212337]=   [fg=#abb4da bg=#212337]=program: cargo build [bg=#212337]=                                   [bg=#212337]=  
│      │    Compiling thndrs v0.1.0                                                 # [bg=#212337]=   [fg=#3b4261 bg=#212337]=   │  [fg=#c0c5ce bg=#212337]=    [fg=#8fa1b3 bg=#212337]=Compiling [fg=#c0c5ce bg=#212337]= thndrs v0.1.0 [bg=#212337]=                                              [bg=#212337]=  
│      │ error[E0277]: the trait bound `X: Y` is not satisfied                      # [bg=#212337]=   [fg=#3b4261 bg=#212337]=   │  [fg=#8fa1b3 bg=#212337]=error[E0277]: [fg=#c0c5ce bg=#212337]= the trait bound  [fg=#c0c5ce bg=#212337]=` [fg=#8fa1b3 bg=#212337]=X: [fg=#c0c5ce bg=#212337]= Y [fg=#c0c5ce bg=#212337]=` [fg=#c0c5ce bg=#212337]= is not satisfied [bg=#212337]=                   [bg=#212337]=  
│      │   --> src/lib.rs:42:10                                                     # [bg=#212337]=   [fg=#3b4261 bg=#212337]=   │  [fg=#c0c5ce bg=#212337]=   [fg=#8fa1b3 bg=#212337]=-- [fg=#c0c5ce bg=#212337]=> [fg=#c0c5ce bg=#212337]= src/lib.rs:42:10 [bg=#212337]=                                                  [bg=#212337]=  
│      │    |                                                                       # [bg=#212337]=   [fg=#3b4261 bg=#212337]=   │  [fg=#c0c5ce bg=#212337]=    [fg=#c0c5ce bg=#212337]=| [bg=#212337]=                                                                    [bg=#212337]=  
│      │ 42 |     fn foo() -> impl Y {                                              # [bg=#212337]=   [fg=#3b4261 bg=#212337]=   │  [fg=#8fa1b3 bg=#212337]=42 [fg=#c0c5ce bg=#212337]=  [fg=#c0c5ce bg=#212337]=| [fg=#c0c5ce bg=#212337]=      [fg=#8fa1b3 bg=#212337]=fn [fg=#c0c5ce bg=#212337]= foo( [fg=#c0c5ce bg=#212337]=) [fg=#c0c5ce bg=#212337]=  [fg=#8fa1b3 bg=#212337]=- [fg=#c0c5ce bg=#212337]=> [fg=#c0c5ce bg=#212337]= impl Y  [fg=#c0c5ce bg=#212337]={ [bg=#212337]=                                           [bg=#212337]=  
│      │    |                    ^^^^^                                              # [bg=#212337]=   [fg=#3b4261 bg=#212337]=   │  [fg=#c0c5ce bg=#212337]=   |                    ^^^^^ [bg=#212337]=                                           [bg=#212337]=  
│                                                                                   # [bg=#212337]=
